<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBgColor"
    android:orientation="vertical">

    <include layout="@layout/st_actionbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/double_padding">

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_maring"
            android:text="@string/custom_flows"/>

        <TextView
            style="@style/Text.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/upload_and_run"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_maring"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Text.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/your_flows"
                android:textAllCaps="true"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/start_new_flow"
                style="@style/Text.Bold.Accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/default_padding"
                android:text="@string/create_flow"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/build_if_statement"
                style="@style/Text.Bold.Accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/default_padding"
                android:text="@string/if_statement"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/play_flows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_upload"/>

                <TextView
                    style="@style/Text.Bold.Accent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textAllCaps="true"
                    android:textSize="13sp"/>

            </LinearLayout>


        </LinearLayout>

        <ListView
            android:id="@+id/flow_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/extra_margin"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/double_maring"/>

    </LinearLayout>

</LinearLayout>