<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBgColor"
    android:orientation="vertical">

    <include
        layout="@layout/st_actionbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/double_padding">

            <TextView
                style="@style/Text.Subtitle.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_maring"
                android:text="@string/flow_details"
                android:textAllCaps="true"/>

            <TextView
                style="@style/Text.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_maring"
                android:text="@string/add_name_and_notes"/>

            <TextView
                style="@style/Text.Bold.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_margin"
                android:text="@string/flow_name"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                style="@style/Text.Bold.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_margin"
                android:text="@string/notes"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/notes_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:minLines="3"/>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_maring"
                android:text="@string/save_and_run"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_shadow_transparent_bg"
        android:gravity="end">

        <LinearLayout
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_maring"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/double_padding"
            android:paddingTop="@dimen/default_padding"
            android:paddingEnd="@dimen/double_padding"
            android:paddingBottom="@dimen/default_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_done"/>

            <TextView
                style="@style/Text.Bold.Accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textAllCaps="true"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>